--- a/package.yaml
+++ b/package.yaml
@@ -17,6 +17,7 @@ description:         Please see the README on GitHub at <https://github.com/emer
 
 dependencies:
 - base >= 4.7 && < 5
+- hmatrix
 
 library:
   source-dirs: src
