--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,8 @@ description:         Please see the README on GitHub at <https://github.com/emer
 dependencies:
 - base >= 4.7 && < 5
 - hmatrix
+- containers
+- vector
 
 library:
   source-dirs: src
